# ESP32-C6-LCD-1.47-Test-LVGL

./: README.md
main/: CMakeLists.txt  main.c
main/LCD_Driver/: ST7789.c  ST7789.h
main/ui/: ui.c  ui.h
main/ui/components/: ui_comp_hook.c
main/ui/screens/: ui_Screen1.c
